Add maxPermSize to recommended launcher commandline #687